Fix Contrast Issues

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -336,13 +336,12 @@ footer {
   color: var(--accent);
   box-shadow: 0 0 6px rgba(0,0,0,0.4);
 }
-
+/******** Add Classification Form view HTML *********/
 .required-msg {
   font-weight: bold;
   margin-bottom: 10px;
-  color: red;
+  color: var(--secondary);
 }
-
 .form-container {
   border: var(--primary) 6px solid;
   padding: 20px;
@@ -351,28 +350,23 @@ footer {
   margin-top: 10px;
   margin: 0 auto;
 }
-
 .classification-form {
   display: flex;
   flex-direction: column;
   gap: 10px;
 }
-
 .classification-form label {
   font-weight: bold;
 }
-
 .input-rules {
   font-size: 0.9rem;
   margin-bottom: -5px;
 }
-
 .classification-form input {
   padding: 8px;
   border-radius: 4px;
   border: var(--secondary) 2px solid;
 }
-
 .classification-form button {
   margin-top: 10px;
   padding: 0.7rem;
@@ -385,7 +379,6 @@ footer {
   border-radius: 4px;
   transition: all 0.3s ease;
 }
-
 /******** Large Viewports *********/
 @media (min-width: 768px) {
   body {
